RESOLVED FIXED 211269
[iOS] Fix confusing idiom for releasing _selectionRects in -[WKTextRange dealloc]
https://bugs.webkit.org/show_bug.cgi?id=211269
Summary [iOS] Fix confusing idiom for releasing _selectionRects in -[WKTextRange deal...
David Kilzer (:ddkilzer)
Reported 2020-04-30 18:23:15 PDT
Fix confusing idiom for releasing _selectionRects in -[WKTextRange dealloc]. This fixes a false positive warning from the clang static analyzer about releasing a variable not owned by the caller.
Attachments
Patch v1 (1.45 KB, patch)
2020-04-30 18:24 PDT, David Kilzer (:ddkilzer)
no flags
David Kilzer (:ddkilzer)
Comment 1 2020-04-30 18:24:08 PDT
Created attachment 398130 [details] Patch v1
David Kilzer (:ddkilzer)
Comment 2 2020-04-30 20:24:16 PDT
Comment on attachment 398130 [details] Patch v1 This is a WK2-only patch, so marking cq+ before mac-debug-wk1 tests are run (skipped).
EWS
Comment 3 2020-04-30 20:26:25 PDT
Committed r260980: <https://trac.webkit.org/changeset/260980> All reviewed patches have been landed. Closing bug and clearing flags on attachment 398130 [details].
Radar WebKit Bug Importer
Comment 4 2020-04-30 20:27:13 PDT
Note You need to log in before you can comment on or make changes to this bug.