[iOS] Fix confusing idiom for releasing _selectionRects in -[WKTextRange dealloc] <https://webkit.org/b/211269>

Reviewed by Wenson Hsieh.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKTextRange dealloc]):
- Switch to more common idiom to release an instance variable.
  This fixes a false positive warning from the clang static
  analyzer about releasing a variable not owned by the caller.


Canonical link: https://commits.webkit.org/224162@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260980 268f45cc-cd09-0410-ab3c-d52691b4dbfc